crates/macro-tools/tests/ui/deref/fail/no_target.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    value: String,
    label: &'static str,
}

fn main() {}
